# podstawy-pracy-z-googlemock

./: CMakeLists.txt  conanfile.txt
src/: Message.cpp  Message.hpp  SendMessage.cpp  SendMessage.hpp
src/Transport/: AbstractTransport.cpp  AbstractTransport.hpp  EmailTransport.cpp  EmailTransport.hpp  SlackTransport.cpp  SlackTransport.hpp
tests/: main.cpp
tests/Message/: EmailTransportTest.cpp  Message.cpp  SendMessage.cpp  SlackTransportTest.cpp
